--- a/4. Manifestations/4.0 Time.md
+++ b/4. Manifestations/4.0 Time.md
@@ -1,5 +1,5 @@
 # 4.0 Time
-When we talk about time, we talk about it in three main contexts, The Past, The present and The Future. Our past is the resoruce that we rely on to make more purposeful decisions in the present, then we hope that these decisions will become fruitful in the future.
+When we talk about time, we talk about it in three main contexts, The Past, The present and The Future. Our past is the resource that we rely on to make more purposeful decisions in the present, then we hope that these decisions will become fruitful in the future.
 
 Let's dig deeper into time as a concept.
 
